--- a/code/ECMS/Customer/Customer.xaml
+++ b/code/ECMS/Customer/Customer.xaml
@@ -25,9 +25,9 @@
 
         </UniformGrid>
         <UniformGrid  DockPanel.Dock="Bottom" Rows="1" Columns="7">
-            <Label></Label>
-            <Label></Label>
-            <Label></Label>
+            <Label HorizontalContentAlignment="Center" Background="Beige">Search Customer:</Label>
+            <TextBox Name="searchTxtBlck"  ></TextBox>
+            <Button Content="Search" ToolTip="Serach Customer Database" Name="searchBtn" Style="{StaticResource smallControlBtnStyle}" Click="searchBtn_Click"></Button>
             <Label></Label>
             <Label></Label>
             <Label></Label>
