--- a/code/ECMS/Employee/Employee.xaml
+++ b/code/ECMS/Employee/Employee.xaml
@@ -17,8 +17,12 @@
         </ResourceDictionary>
     </Window.Resources>
     <DockPanel LastChildFill="True">
-            <Button DockPanel.Dock="Bottom" HorizontalAlignment="Right" Content="Cancel"  ToolTip="Cancel" Name="cancelBtn" Style="{StaticResource smallControlBtnStyle}" Click="cancelBtn_Click"></Button>
+        
+        <Button DockPanel.Dock="Bottom" HorizontalAlignment="Right" Content="Cancel"  ToolTip="Cancel" Name="cancelBtn" Style="{StaticResource smallControlBtnStyle}" Click="cancelBtn_Click"></Button>
         <UniformGrid  DockPanel.Dock="top" Rows="1">
+            <Label HorizontalContentAlignment="Center" Background="Beige">Search Employee:</Label>
+            <TextBox Name="searchTxtBlck"  ></TextBox>
+            <Button Content="Search" ToolTip="Serach Employee Database" Name="searchBtn" Style="{StaticResource smallControlBtnStyle}" Click="searchBtn_Click"></Button>
             <Button Content="View Details"  ToolTip="View or Refresh" Name="viewEmployeeBtn" Style="{StaticResource smallControlBtnStyle}" Click="viewEmployeeBtn_Click"></Button>
             <Button Content="Add Employee" ToolTip="Click To Add New Employee" Name="addEmployeeBtn" Style="{StaticResource smallControlBtnStyle}" Click="addEmployeeBtn_Click"></Button>
             <Button Content="Edit Details"  ToolTip="Edit Details" Name="editEmployeeBtn" Style="{StaticResource smallControlBtnStyle}" Click="editEmployeeBtn_Click"></Button>
