--- a/code/ECMS/Contractor/Contractor.xaml
+++ b/code/ECMS/Contractor/Contractor.xaml
@@ -25,8 +25,8 @@
        
         </UniformGrid>
         <UniformGrid  DockPanel.Dock="Bottom" Columns="7">
-            <Label HorizontalContentAlignment="Center" Background="Beige">Search Contractor:</Label>
-            <TextBox Name="searchTxtBlck"  ></TextBox>
+            <Label HorizontalContentAlignment="Center" Style="{StaticResource labelStyle}">Search Contractor:</Label>
+            <TextBox Name="searchTxtBlck" Style="{StaticResource textboxStyle}"   ></TextBox>
             <Button Content="Search" ToolTip="Serach Contractor Database" Name="searchBtn" Style="{StaticResource smallControlBtnStyle}" Click="searchBtn_Click"></Button>
             <Label></Label>
             <Label></Label>
