--- a/code/ECMS/Search/Search.xaml
+++ b/code/ECMS/Search/Search.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="ECMS.Search"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Search" Height="650" Width="1200"
+       DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        Title="Search Customer" 
+        Height="650" Width="1200"
         VerticalContentAlignment="Center"
         FontStretch="UltraExpanded"
         Background="Black"
@@ -14,27 +16,26 @@
         </ResourceDictionary>
     </Window.Resources>
     <DockPanel>
-        <UniformGrid DockPanel.Dock="Bottom"   Columns="4">
+        
+        <UniformGrid  DockPanel.Dock="Bottom" Rows="1" Columns="7">
+            <Label HorizontalContentAlignment="Center"  Style= "{StaticResource labelStyle}" >Search by Id:</Label>
+            <TextBox Name="searchTxtBlck" Style="{StaticResource textboxStyle}"  ></TextBox>
+            <Button Content="Search" ToolTip="Serach Customer Database" Name="searchBtn" Style="{StaticResource smallControlBtnStyle}" Click="searchBtn_Click"></Button>
+           
             <Label></Label>
-            <Label Content="Customer Name  :" Margin="20" Style="{StaticResource labelStyle}"/>
-            <TextBox  Name="customerNameTxtbox" Margin="20"  Style="{StaticResource textboxStyle}"></TextBox>
-            <Label></Label>
-            <Label></Label>
-            <Label></Label>
-            <Label Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"></Label>
-            <Label></Label>
-            <Label></Label>
-            <Label Content="Address :" Margin="20" Style="{StaticResource labelStyle}" />
-            <TextBox Name="addressxtbox" Margin="20" Style="{StaticResource textboxStyle}"></TextBox>
-            <Label></Label>
-            <Label></Label>
-            <Label Content="Contact :" Margin="20" Style="{StaticResource labelStyle}" />
-            <TextBox Name="conntactTxtbox" Margin="20" Style="{StaticResource textboxStyle}"></TextBox>
-            <Label></Label>
-            <Label></Label>
-            <Button Content="Search" ToolTip="Search" Margin="20" Name="searchBtn" Style="{StaticResource smallControlBtnStyle}" Click="searchBtn_Click"></Button>
-            <Button Content="Cancel" ToolTip="Cancel" Margin="20" Name="cancelBtn" Style="{StaticResource smallControlBtnStyle}" Click="cancelBtn_Click"></Button>
-            <Label></Label>
+            <Button Content="Cancel" ToolTip="Cancel" Name="cancelBtn" Style="{StaticResource smallControlBtnStyle}" Click="cancelBtn_Click"></Button>
+        </UniformGrid>
+        <UniformGrid DockPanel.Dock="top">
+            <ListView Name="customerView" ItemsSource="{Binding customerCollection}">
+                <ListView.View>
+                    <GridView>
+                        
+                        <GridViewColumn Width="300" Header="Name"  DisplayMemberBinding="{Binding name}"  />
+                        <GridViewColumn Width="400" Header="Address"  DisplayMemberBinding="{Binding address}"  />
+                        <GridViewColumn Width="200" Header="Contact"  DisplayMemberBinding="{Binding contact}"  />
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </UniformGrid>
     </DockPanel>
 </Window>
