--- a/code/ECMS/Credits.xaml
+++ b/code/ECMS/Credits.xaml
@@ -10,7 +10,7 @@
     <DockPanel>
         <UniformGrid VerticalAlignment="Center" HorizontalAlignment="Center" Rows="3">
             <TextBlock Foreground="White" HorizontalAlignment="Right" FontSize="20">
-                This software has been devolpoed by Dipanwita Dey and Susmita Podder under the company  
+                This software has been devolpoed by  Sangita Mondal under the company  
             </TextBlock>
             <TextBlock Foreground="White" FontSize="20">
                 named Technecise for partially accomplisement of M.Sc.(Computer Technology).
